--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
-  "name": "gameserver",
-  "version": "1.0.0",
-  "description": "Game server",
-  "main": "app.js",
- 
+  "name": "node-js-getting-started",
+  "version": "0.3.0",
+  "description": "A sample Node.js app using Express 4",
+  "engines": {
+    "node": "12.x"
+  },
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "node test.js"
+  },
+  "dependencies": {
+    "ejs": "^2.5.6",
+    "express": "^4.15.2"
+  },
+  "devDependencies": {
+    "got": "^11.3.0",
+    "tape": "^4.7.0"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MrBartek21/GameServer.git"
+    "url": "https://github.com/heroku/node-js-getting-started"
   },
-  "author": "MrBartek21",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MrBartek21/GameServer/issues"
-  },
-  "homepage": "https://github.com/MrBartek21/GameServer#readme"
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
+  "license": "MIT"
 }
